# yactfr

./: .travis.yml  CMakeLists.txt  HOWITWORKS.adoc  LICENSE  README.adoc
doc/: CMakeLists.txt
doc/api/: Doxyfile.in  examples.dox  groups.dox  main.dox
tests/: CMakeLists.txt  conftest.py  test.bash
tests/common/: common-trace.hpp  elem-printer.hpp  element-collector.hpp  element-printer.hpp  mem-data-source-factory.hpp  mem-data-src-factory.hpp  yactfrutils.py
tests/testers/: CMakeLists.txt  iter-data-tester.cpp  metadata-stream-tester.cpp  metadata-text-tester.cpp  trace-env-stream-tester.cpp
tests/tests-elem-seq/: CMakeLists.txt  test-at.cpp  test-begin.cpp  test-end.cpp  test.bats  test_elem_seq.py
tests/tests-iter/: CMakeLists.txt  test-cmp.cpp  test-copy-assign.cpp  test-copy-ctor.cpp  test-move-assign.cpp  test-move-ctor.cpp  test-seek-packet.cpp  test.bats  test_iter.py
tests/tests-iter-data/: CMakeLists.txt  conftest.py  fail-align-beyond-content.streams  fail-align-beyond-data.streams  fail-array-beyond-content.streams  fail-array-beyond-data.streams  fail-be-to-le-change-in-byte.streams  fail-dl-array-beyond-content.streams  fail-dl-array-beyond-data.streams  fail-dl-str-beyond-content.streams  fail-dl-str-beyond-data.streams  fail-dyn-array-beyond-content.streams  fail-dyn-array-beyond-data.streams  fail-dyn-text-array-beyond-content.streams  fail-dyn-text-array-beyond-data.streams  fail-dynamic-array-beyond-content.streams  fail-dynamic-array-beyond-data.streams  fail-fl-float-beyond-data.streams  fail-fl-int-beyond-content.streams  fail-fl-int-beyond-data.streams  fail-fl-int-one-bit-beyond-content.streams  fail-fl-int-one-bit-beyond-data.streams  fail-float-beyond-data.streams  fail-int-beyond-content.streams  fail-int-beyond-data.streams  fail-int-one-bit-beyond-content.streams  fail-int-one-bit-beyond-data.streams  fail-le-to-be-change-in-byte.streams  fail-nt-str-beyond-content.streams  fail-nt-str-beyond-data.streams  fail-packet-content-size-gt-packet-total-size-1.streams  fail-packet-content-size-gt-packet-total-size-2.streams  fail-packet-content-size-too-small.streams  fail-packet-total-size-not-multiple-eight.streams  fail-packet-total-size-too-small.streams  fail-pkt-content-len-gt-pkt-total-len-1.streams  fail-pkt-content-len-gt-pkt-total-len-2.streams  fail-pkt-content-len-too-small.streams  fail-pkt-total-len-not-multiple-eight.streams  fail-pkt-total-len-too-small.streams  (+113 more)
tests/tests-iter-pos/: CMakeLists.txt  test-bool.cpp  test-cmp.cpp  test-copy-assign.cpp  test-copy-ctor.cpp  test-move-assign.cpp  test-move-ctor.cpp  test-restore.cpp  test.bats  test_iter_pos.py
tests/tests-metadata-stream/: fail-content-size-gt-packet-size  fail-content-size-lt-header-size  fail-ends-checksum  fail-ends-checksum-scheme  fail-ends-compression-scheme  fail-ends-content  fail-ends-content-size  fail-ends-encryption-scheme  fail-ends-magic  fail-ends-major-version  fail-ends-minor-version  fail-ends-one-header  fail-ends-packet-size  fail-ends-padding  fail-ends-uuid  fail-packet-size-not-multiple-8  fail-pkt-content-size-not-multiple-8  fail-unsupported-checksum-scheme  fail-unsupported-compression-scheme  fail-unsupported-encryption-scheme  fail-uuid-mismatch  fail-wrong-major  fail-wrong-minor  pass-23-packets  pass-empty-pkt  pass-text  pass-text-no-sig  pass-with-signature  pass-with-signature-be  test.bats  test_metadata_stream.py
tests/tests-metadata-text/: conftest.py  fail-array-env-no-env  fail-array-env-no-key  fail-array-length-empty  fail-clk-type-unknown-attr  fail-clk-type-wrong-freq-attr-2  fail-clk-type-wrong-freq-attr-3  fail-clk-type-wrong-precision-attr-2  fail-clock-dup-attr  fail-clock-wrong-absolute-1  fail-clock-wrong-absolute-2  fail-clock-wrong-description-2  fail-clock-wrong-name  fail-clock-wrong-offset-1  fail-clock-wrong-offset-2  fail-clock-wrong-precision-1  fail-clock-wrong-uuid-1  fail-clock-wrong-uuid-2  fail-clock-wrong-uuid-3  fail-clock-wrong-uuid-4  fail-ctf-testsuite-variant-tag-type-floating  fail-dl-array-type-inval-len-loc-1  fail-dl-array-type-inval-len-loc-11  fail-dl-array-type-inval-len-loc-12  fail-dl-array-type-inval-len-loc-13  fail-dl-array-type-inval-len-loc-2  fail-dl-array-type-inval-len-loc-9  fail-dl-str-type-inval-len-loc-11  fail-dl-str-type-inval-len-loc-12  fail-dl-str-type-inval-len-loc-13  fail-dl-str-type-inval-len-loc-2  fail-dl-str-type-inval-len-loc-3  fail-dl-str-type-inval-len-loc-5  fail-dst-dup-ercc-type  fail-dst-dup-pc-type  fail-dst-missing-id-attr  fail-dst-unknown-attr  fail-dt-alias-dl-str-type-len-type-outside  fail-dt-alias-dup  fail-dyn-array-type-inval-len-loc-14  (+210 more)
tests/tests-pkt-seq/: CMakeLists.txt  test-at.cpp  test-begin.cpp  test-end.cpp  test.bats
tests/tests-trace-env-stream/: conftest.py  fail-dup-entry.streams  fail-entry-key-already-set.streams  fail-entry-val-already-set-1.streams  fail-entry-val-already-set-2.streams  fail-int-entry-val-overflow.streams  fail-missing-entry-key.streams  fail-missing-entry-val-no-user-attr.streams  fail-missing-entry-val-wrong-type.streams  fail-wrong-dst-no-name.streams  fail-wrong-dst-no-ns.streams  fail-wrong-dst-wrong-name.streams  pass-empty.streams  (+17 more)
yactfr/: CMakeLists.txt  data-blk.cpp  data-block.cpp  data-source-factory.cpp  data-source.cpp  data-src-factory.cpp  data-src.cpp  decoding-errors.cpp  ds20-packet-view-factory.cpp  elem-seq-it.cpp  elem-seq.cpp  elem-visitor.cpp  element-visitor.cpp  fl-int-reader.hpp  from-metadata-text.cpp  int-reader.hpp  item-from-json-val.hpp  item.cpp  json-parser.hpp  json-val-from-text.cpp  json-val-from-text.hpp  json-val.cpp  json-val.hpp  memory-mapped-file-view-factory-impl.cpp  memory-mapped-file-view-factory-impl.hpp  memory-mapped-file-view-factory.cpp  mmap-file-view-factory-impl.cpp  mmap-file-view-factory-impl.hpp  mmap-file-view-factory.cpp  packet-proc-builder.cpp  packet-proc-builder.hpp  packet-sequence-iterator.cpp  packet-sequence.cpp  pkt-proc-builder.cpp  pkt-proc-builder.hpp  proc.cpp  proc.hpp  std-fl-int-reader.hpp  std-int-reader.hpp  str-scanner.cpp  (+10 more)
(+1272 files in other folders)
